--- a/CorridaInfinita/MainPage.xaml
+++ b/CorridaInfinita/MainPage.xaml
@@ -4,27 +4,60 @@
              x:Class="CorridaInfinita.MainPage">
 
    <Grid>
-   <Image x:Name="fundo"
-   Source="fundo.png"
-   Aspect="Fill"/>
+      <HorizontalStackLayout x:Name="Layer1"
+                             VerticalOptions="Fill">
+         <Image Source="fundo.png"
+                VerticalOptions="Fill"
+                Aspect="Fill"/>
+         <Image Source="fundo.png"
+                VerticalOptions="Fill"
+                Aspect="Fill"/>
+         <Image Source="fundo.png"
+                VerticalOptions="Fill"
+                Aspect="Fill"/>
+      </HorizontalStackLayout>
 
-   <Image x:Name="fundopredio"
-   Source="fundo3.png"
-   Aspect="Fill"/>
+      <HorizontalStackLayout x:Name="Layer2">
+         <Image Source="fundo3.png"
+                VerticalOptions="Fill"
+                Aspect="Fill"/>
+         <Image Source="fundo3.png"
+                VerticalOptions="Fill"
+                Aspect="Fill"/>
+         <Image Source="fundo3.png"
+                VerticalOptions="Fill"
+                Aspect="Fill"/>
+      </HorizontalStackLayout>
 
-   <Image x:Name="fundoparque"
-   Source="fundo2.png"
-   Aspect="Fill"/>
+      <HorizontalStackLayout x:Name="Layer3">
+         <Image Source="fundo2.png"
+                VerticalOptions="Fill"
+                Aspect="Fill"/>
+         <Image Source="fundo2.png"
+                VerticalOptions="Fill"
+                Aspect="Fill"/>
+         <Image Source="fundo2.png"
+                VerticalOptions="Fill"
+                Aspect="Fill"/>
+      </HorizontalStackLayout>
 
-   <Image x:Name="chao"
-   Source="chao.png"
-   Aspect="Fill"/>
+      <HorizontalStackLayout x:Name="Layerchao">
+         <Image Source="chao.png"
+                VerticalOptions="Fill"
+                Aspect="Fill"/>
+         <Image Source="chao.png"
+                VerticalOptions="Fill"
+                Aspect="Fill"/>
+         <Image Source="chao.png"
+                VerticalOptions="Fill"
+                Aspect="Fill"/>
+      </HorizontalStackLayout>
 
-   <Image x:Name="animal"
-   Source="animal.png"
-   Aspect="Fill"/>
-   
-   
+      <Image x:Name="animal"
+             Source="animal.png"
+             Aspect="AspectFill"/>
+
+
    </Grid>
 
 </ContentPage>
